fixed alignment in contact us section

--- a/src/Sections/ContactUs/ContactUs.module.css
+++ b/src/Sections/ContactUs/ContactUs.module.css
@@ -15,6 +15,16 @@
   justify-content: center;
 }
 
+@media(max-width: 768px){
+  .section{
+    padding: 150px 32px;
+  }
+  .container{
+    flex-direction: column;
+    align-items: start;
+  }
+}
+
 .card{
   display: flex;
   flex-direction: column;
